src/test/resources/de/monticore/umlcd4a/cocos/mcg2ebnf/invalid/CD4AC3003.cd
package de.monticore.umlcd4a.cocos.mcg2ebnf.invalid;

classdiagram CD4AC3003 {
	class A {
		public void m();
	}
	class B {
		public void m(String a);
		public String m2(String a, int b);
	}
}